GNOME Bugzilla – Bug 639951
keyboard: Fix infinite loop while selecting an xkb option
Last modified: 2011-01-19 15:14:02 UTC
This fixes a trivial bug that causes an infinite loop when you try to set more than one xkb option
Created attachment 178727 [details] [review] keyboard: Fix infinite loop while selecting an xkb option
Created attachment 178729 [details] [review] region: Fix infinite loop when selecting Xkb options Spotted by Arun Raghavan <arun.raghavan@collabora.co.uk>
The old code was ugly ugly. Does the above fix the problem for you?
Thanks Bastien, it does fix the problem.
Attachment 178729 [details] pushed as 978ae12 - region: Fix infinite loop when selecting Xkb options