region: Fix infinite loop when selecting Xkb options

Spotted by Arun Raghavan <arun.raghavan@collabora.co.uk>

https://bugzilla.gnome.org/show_bug.cgi?id=639951